# Web_Browser_API

./: LICENSE  README.md  pyproject.toml  requirements.txt
src/: api.py  driver.py  move_mouse.py
src/web_browser_api/: __init__.py  _keyboard.py  api.py  debug_functions.py  driver.py  move_mouse.py
